fix: profile picture size on mobile

--- a/src/sections/find-me/FindMe.module.css
+++ b/src/sections/find-me/FindMe.module.css
@@ -29,6 +29,7 @@
   }
   .findMe__profilePicture {
     width: 140px;
+    height: 140px;
   }
   .findMe__content {
     margin-top: 12px;
